fixed white spaces on codes send to /print route

--- a/views/css/grid.sass
+++ b/views/css/grid.sass
@@ -74,11 +74,11 @@ $ninesixty-columns: 16
 	+grid-unit-base
 	+grid-width(3,0px)
 	background-color: #efefef
-	border: 1px solid #333			
+	border: 1px solid #333
 .name
 	line-height: 13px
 	padding: 5px
 	color: #333
 	font-size: 11px
-.description,.price,.image
+.description,.price,.image,.code
 	display: none
